@@ -277,8 +277,9 @@ namespace Rivet {
   /// @brief Return the bin index of the given value, @a val, given a vector of bin edges
   ///
   /// NB. The @a binedges vector must be sorted
-  template <typename NUM>
-  inline int index_between(const NUM& val, const vector<NUM>& binedges) {
+  template <typename NUM1, typename NUM2>
+  inline typename boost::enable_if_c<boost::is_floating_point<NUM1>::value && boost::is_floating_point<NUM2>::value, int>::type
+    index_between(const NUM1& val, const vector<NUM2>& binedges) {
     if (!inRange(val, binedges.front(), binedges.back())) return -1; //< Out of histo range
     int index = -1;
     for (size_t i = 1; i < binedges.size(); ++i) {
